--- a/src/main/resources/templates/admin_panel.html
+++ b/src/main/resources/templates/admin_panel.html
@@ -100,10 +100,10 @@
                                             <td th:text="${ur.getKey().getEmail()}">Email</td>
                                             <td th:text="${ur.getValue()}">Role</td>
 
-                                            <td><a th:href="@{/user/userFor/(id=${ur.getKey().getId()})}"
+                                            <td><a th:href="@{/user/{id}(id=${ur.getKey().getId()})}"
                                                 class="btn btn-info btn-sm editBtn">Edit</a></td>
 
-                                            <td><a th:href="@{/user/userFor/(id=${ur.getKey().getId()})}"
+                                            <td><a th:href="@{/user/{id}(id=${ur.getKey().getId()})}"
                                                    class="btn btn-danger btn-sm deleteBtn">Delete</a></td>
                                         </tr>
                                     </div>
@@ -323,33 +323,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script>
-    $(document).ready(function () {
-        $('.editBtn').on('click', function (event) {
-            event.preventDefault();
-            $.get($(this).attr('href'), function (user) {
-                $('#id1').val(user.id);
-                $('#firstname1').val(user.firstName);
-                $('#lastname1').val(user.lastName);
-                $('#age1').val(user.age);
-                $('#email1').val(user.email);
-            });
-            $('#editUser').modal();
-        });
-
-        $('.deleteBtn').on('click', function (event) {
-            event.preventDefault();
-            $.get($(this).attr('href'), function (user) {
-                $('#id2').val(user.id);
-                $('#firstname2').val(user.firstName);
-                $('#lastname2').val(user.lastName);
-                $('#age2').val(user.age);
-                $('#email2').val(user.email);
-            });
-            $('#deleteUser').modal();
-        });
-    });
-</script>
+<script src="../static/js/modal.js" th:src="@{js/modal.js}" type="text/javascript"></script>
 </body>
 </html>
 
