--- a/src/main/resources/templates/user_panel.html
+++ b/src/main/resources/templates/user_panel.html
@@ -39,7 +39,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-11 p-2 bg-dark text-white">
-            <t class="font-weight-bold ml-2" th:text="${user.getEmail()}">user@mail.ru</t>
+            <t class="font-weight-bold ml-2" id="email">user@mail.ru</t>
             <t class="font-weight-normal">with roles: USER</t>
         </div>
         <form class="col-1 p-2 bg-dark text-right" th:method="POST" th:action="@{/logout}">
@@ -58,32 +58,21 @@
             <div class="border col-12 bg-white ml-1">
                 <table class="table table-striped">
                     <p></p>
-                    <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Age</th>
-                        <th>Email</th>
-                        <th>Role</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td th:text="${user.getId()}">ID</td>
-                        <td th:text="${user.getFirstName()}">First Name</td>
-                        <td th:text="${user.getLastName()}">Last Name</td>
-                        <td th:text="${user.getAge()}">Age</td>
-                        <td th:text="${user.getEmail()}">Email</td>
-                        <td>USER</td>
-                    <tr>
-                    </tbody>
+                    <thead id="head"></thead>
+                    <tbody id="data"></tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
-
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script src="../static/js/user.js" th:src="@{js/user.js}" type="text/javascript"></script>
 </body>
 </html>
 
