--- a/src/main/resources/templates/user_panel.html
+++ b/src/main/resources/templates/user_panel.html
@@ -39,7 +39,7 @@
     <div class="row">
         <div class="col-11 p-2 bg-dark text-white">
             <t class="font-weight-bold ml-2" id="email">user@mail.ru</t>
-            <t class="font-weight-normal">with roles: USER</t>
+            <t class="font-weight-normal" id="role">with roles: USER</t>
             <t class="d-none" th:text="${id}" id="id"></t>
         </div>
         <form class="col-1 p-2 bg-dark text-right" th:method="POST" th:action="@{/logout}">
@@ -72,7 +72,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script src="../static/js/user.js" th:src="@{js/user.js}" type="text/javascript"></script>
+<script src="../static/js/user.js" th:src="@{js/user.js}"></script>
 </body>
 </html>
 
