--- a/src/main/resources/templates/admin_panel.html
+++ b/src/main/resources/templates/admin_panel.html
@@ -79,26 +79,7 @@
                                 <table class="table table-striped">
                                     <p></p>
                                     <thead id="headAll"></thead>
-                                    <tbody id="dataAll">
-<!--                                    <div th:each="ur : ${user_role}">-->
-<!--                                        <tr >-->
-<!--                                            <td th:text="${ur.getKey().getId()}">ID</td>-->
-<!--                                            <td th:text="${ur.getKey().getFirstName()}">First Name</td>-->
-<!--                                            <td th:text="${ur.getKey().getLastName()}">Last Name</td>-->
-<!--                                            <td th:text="${ur.getKey().getAge()}">Age</td>-->
-<!--                                            <td th:text="${ur.getKey().getEmail()}">Email</td>-->
-<!--                                            <td th:text="${ur.getValue()}">Role</td>-->
-<!--                                        -->
-<!--                                            <td><a th:href="@{/user/{id}(id=${ur.getKey().getId()})}"-->
-<!--                                                class="btn btn-info btn-sm editBtn">Edit</a></td>-->
-
-<!--                                            <td><a th:href="@{/user/{id}(id=${ur.getKey().getId()})}"-->
-<!--                                                   class="btn btn-danger btn-sm deleteBtn">Delete</a></td>-->
-<!--                                        </tr>-->
-<!--                                    </div>-->
-                                    </tbody>
-
-
+                                    <tbody id="dataAll"></tbody>
                                 </table>
                             </div>
                         </div>
@@ -134,8 +115,8 @@
                                                    placeholder="Password" required>
                                         </div>
                                         <div class="form-group text-center mt-3">
-                                            <label for="role" class="font-weight-bold  mb-0">Role</label>
-                                            <select multiple class="form-control" name="role" id="role"
+                                            <label for="roles" class="font-weight-bold  mb-0">Role</label>
+                                            <select multiple class="form-control" name="role" id="roles"
                                                     style="height: 50px;">
                                                 <option>ADMIN</option>
                                                 <option>USER</option>
@@ -143,7 +124,7 @@
                                             </select>
                                         </div>
                                         <div class="text-center mt-3">
-                                            <button class="btn btn-success" type="submit">Add new user</button>
+                                            <button class="btn btn-success newBtn" type="submit" >Add new user</button>
                                         </div>
                                     </form>
                                 </div>
@@ -214,7 +195,7 @@
                         <input type="password" id="password1" name="password" class="form-control">
                     </div>
                     <div class="form-group text-center mt-3 ">
-                        <label for="role" class="font-weight-bold mb-0">Role</label>
+                        <label for="role1" class="font-weight-bold mb-0">Role</label>
                         <select multiple class="form-control" name="role" id="role1"
                                 style="height: 50px;">
                             <option>ADMIN</option>
@@ -272,7 +253,7 @@
                                placeholder="Email address" readonly>
                     </div>
                     <div class="form-group text-center mt-3">
-                        <label for="role" class="font-weight-bold mb-0">Role</label>
+                        <label for="role2" class="font-weight-bold mb-0">Role</label>
                         <select multiple class="form-control" name="role" id="role2"
                                 style="height: 50px;" disabled="disabled">
                             <option>ADMIN</option>
