--- a/src/main/resources/templates/admin_panel.html
+++ b/src/main/resources/templates/admin_panel.html
@@ -34,7 +34,6 @@
         <div class="col-11 p-2 bg-dark text-white">
             <t class="font-weight-bold ml-2" id="email">user@mail.ru</t>
             <t class="font-weight-normal" id="role">with roles: ADMIN</t>
-            <t class="d-none" th:text="${id}" id="id"></t>
         </div>
         <form class="col-1 p-2 bg-dark text-right" th:method="POST" th:action="@{/logout}">
             <button class="btn btn-dark text-white-50 btn-sm mr-1" type="submit">Logout</button>
@@ -88,7 +87,7 @@
                             <div class="col-12 st3 ml-1 border">
                                 <div class="container-fluid" style="width: 30%">
                                     <br>
-                                    <form th:method="POST" th:action="@{/admin/new}" th:object="${user}">
+                                    <form th:method="POST" th:action="@{/admin/new}" th:object="${user}" class="formNew">
                                         <div class="text-center">
                                             <label for="firstname" class="font-weight-bold  mb-0">First name</label>
                                             <input type="text" id="firstname" name="firstName" class="form-control"
@@ -119,12 +118,12 @@
                                             <select multiple class="form-control" name="role" id="roles"
                                                     style="height: 50px;">
                                                 <option>ADMIN</option>
-                                                <option>USER</option>
+                                                <option selected>USER</option>
                                                 <option>ADMIN USER</option>
                                             </select>
                                         </div>
                                         <div class="text-center mt-3">
-                                            <button class="btn btn-success newBtn" type="submit" >Add new user</button>
+                                            <button class="btn btn-success" type="submit">Add new user</button>
                                         </div>
                                     </form>
                                 </div>
@@ -148,7 +147,7 @@
                 </div><!--<инфо по юзеру из админа>-->
             </div>
         </div>
-    </div>
+    </div><!--вкладки про всех и про нового-->
 </div>
 
 <!--Modal Edit-->
@@ -162,7 +161,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form th:method="PUT" th:action="@{admin/edit}">
+            <form th:method="PUT" th:action="@{admin/edit}" class="formEdit">
                 <div class="container-fluid w-50">
 
                     <div class="text-center mt-3">
@@ -206,7 +205,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal" id="eBC">Close</button>
                     <button type="submit" class="btn btn-info btn-sm">Edit</button>
                 </div>
             </form>
@@ -225,7 +224,7 @@
                 </button>
             </div>
 
-            <form th:method="DELETE" th:action="@{/admin/delete}">
+            <form th:method="DELETE" th:action="@{/admin/delete}" class="formDelete">
                 <div class="container-fluid" style="width: 50%">
                     <div class="text-center mt-3">
                         <label for="id2" class="font-weight-bold mb-0">ID</label>
@@ -263,7 +262,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal" id="dBC">Close</button>
                     <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                 </div>
             </form>
