--- a/src/main/resources/templates/admin_panel.html
+++ b/src/main/resources/templates/admin_panel.html
@@ -87,7 +87,7 @@
                             <div class="col-12 st3 ml-1 border">
                                 <div class="container-fluid" style="width: 30%">
                                     <br>
-                                    <form th:method="POST" th:action="@{/admin/new}" th:object="${user}" class="formNew">
+                                    <form class="formNew">
                                         <div class="text-center">
                                             <label for="firstname" class="font-weight-bold  mb-0">First name</label>
                                             <input type="text" id="firstname" name="firstName" class="form-control"
@@ -161,7 +161,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form th:method="PUT" th:action="@{admin/edit}" class="formEdit">
+            <form class="formEdit">
                 <div class="container-fluid w-50">
 
                     <div class="text-center mt-3">
@@ -194,8 +194,8 @@
                         <input type="password" id="password1" name="password" class="form-control">
                     </div>
                     <div class="form-group text-center mt-3 ">
-                        <label for="role1" class="font-weight-bold mb-0">Role</label>
-                        <select multiple class="form-control" name="role" id="role1"
+                        <label for="roles1" class="font-weight-bold mb-0">Role</label>
+                        <select multiple class="form-control" name="role" id="roles1"
                                 style="height: 50px;">
                             <option>ADMIN</option>
                             <option>USER</option>
@@ -224,7 +224,7 @@
                 </button>
             </div>
 
-            <form th:method="DELETE" th:action="@{/admin/delete}" class="formDelete">
+            <form class="formDelete">
                 <div class="container-fluid" style="width: 50%">
                     <div class="text-center mt-3">
                         <label for="id2" class="font-weight-bold mb-0">ID</label>
