--- a/src/main/resources/templates/mine_login.html
+++ b/src/main/resources/templates/mine_login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,7 +30,6 @@
         <input type="email" id="username" name="username" class="form-control mt-3" placeholder="Email address" required
                autofocus>
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button class="btn btn-lg btn-primary btn-block mt-1" type="submit">Sign in</button>
     </form>
 </div>
