--- a/src/main/resources/templates/admin_panel.html
+++ b/src/main/resources/templates/admin_panel.html
@@ -138,10 +138,8 @@
                     <div class="border col-12 bg-white ml-1">
                         <table class="table table-striped">
                             <p></p>
-
                             <thead id="head"></thead>
                             <tbody id="data"></tbody>
-
                         </table>
                     </div>
                 </div><!--<инфо по юзеру из админа>-->
@@ -163,31 +161,25 @@
             </div>
             <form class="formEdit">
                 <div class="container-fluid w-50">
-
                     <div class="text-center mt-3">
                         <label for="id1" class="font-weight-bold mb-0">ID</label>
-                        <input type="text" id="id1" name="id" class="form-control"
-                               placeholder="ID" readonly>
+                        <input type="text" id="id1" name="id" class="form-control" readonly>
                     </div>
                     <div class="text-center mt-3">
                         <label for="firstname" class="font-weight-bold mb-0">First name</label>
-                        <input type="text" id="firstname1" name="firstName" class="form-control"
-                               placeholder="First name" required autofocus>
+                        <input type="text" id="firstname1" name="firstName" class="form-control" required autofocus>
                     </div>
                     <div class="text-center mt-3">
                         <label for="lastname" class="font-weight-bold mb-0">Last name</label>
-                        <input type="text" id="lastname1" name="lastName" class="form-control"
-                               placeholder="Last name" required>
+                        <input type="text" id="lastname1" name="lastName" class="form-control" required>
                     </div>
                     <div class="text-center mt-3">
                         <label for="age" class="font-weight-bold  mb-0">Age</label>
-                        <input type="number" step="1" id="age1" name="age" class="form-control"
-                               placeholder="Age" required>
+                        <input type="number" step="1" id="age1" name="age" class="form-control" required>
                     </div>
                     <div class="text-center mt-3">
                         <label for="email" class="font-weight-bold mb-0">Email</label>
-                        <input type="email" id="email1" name="email" class="form-control"
-                               placeholder="Email address" required>
+                        <input type="email" id="email1" name="email" class="form-control" required>
                     </div>
                     <div class="text-center mt-3">
                         <label for="password" class="font-weight-bold mb-0">Password</label>
@@ -228,28 +220,23 @@
                 <div class="container-fluid" style="width: 50%">
                     <div class="text-center mt-3">
                         <label for="id2" class="font-weight-bold mb-0">ID</label>
-                        <input type="text" id="id2" name="id" class="form-control"
-                               placeholder="ID" readonly>
+                        <input type="text" id="id2" name="id" class="form-control" readonly>
                     </div>
                     <div class="text-center mt-3">
                         <label for="firstname" class="font-weight-bold mb-0">First name</label>
-                        <input type="text" id="firstname2" name="firstName" class="form-control"
-                               placeholder="First name" readonly>
+                        <input type="text" id="firstname2" name="firstName" class="form-control" readonly>
                     </div>
                     <div class="text-center mt-3">
                         <label for="lastname" class="font-weight-bold mb-0">Last name</label>
-                        <input type="text" id="lastname2" name="lastName" class="form-control"
-                               placeholder="Last name" readonly>
+                        <input type="text" id="lastname2" name="lastName" class="form-control" readonly>
                     </div>
                     <div class="text-center mt-3">
                         <label for="age" class="font-weight-bold mb-0">Age</label>
-                        <input type="text" id="age2" name="age" class="form-control"
-                               placeholder="Age" readonly>
+                        <input type="text" id="age2" name="age" class="form-control" readonly>
                     </div>
                     <div class="text-center mt-3">
                         <label for="email" class="font-weight-bold mb-0">Email</label>
-                        <input type="email" id="email2" name="email" class="form-control"
-                               placeholder="Email address" readonly>
+                        <input type="email" id="email2" name="email" class="form-control" readonly>
                     </div>
                     <div class="form-group text-center mt-3">
                         <label for="role2" class="font-weight-bold mb-0">Role</label>
