--- a/src/main/resources/templates/mine_login.html
+++ b/src/main/resources/templates/mine_login.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <title>Login page</title>
     <link rel="shortcut icon" type="image/png"
           href="https://avatars.mds.yandex.net/i?id=bc97ef2f6266bf31f3060082b2ab57cf-7000993-images-thumbs&n=13&exp=1">
@@ -13,17 +11,9 @@
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
-    <style>
-
-        .st1 {
-            width: 30%;
-        }
-
-    </style>
 </head>
 <body>
-
-<div class="container st1">
+<div class="container" style="width: 30%">
     <br>
     <form class="form-signin" method="post" action="/process">
         <h2 class="form-signin-heading font-weight-bold">Please sign in</h2>
@@ -33,15 +23,5 @@
         <button class="btn btn-lg btn-primary btn-block mt-1" type="submit">Sign in</button>
     </form>
 </div>
-
-<!--<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"-->
-<!--        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"-->
-<!--        crossorigin="anonymous"></script>-->
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"-->
-<!--        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"-->
-<!--        crossorigin="anonymous"></script>-->
-
-<!--<script src="../static/js/default.js" th:src="@{js/default.js}"></script>-->
 </body>
 </html>
