--- a/src/main/resources/templates/mine_login.html
+++ b/src/main/resources/templates/mine_login.html
@@ -17,8 +17,8 @@
     <br>
     <form class="form-signin" method="post" action="/process">
         <h2 class="form-signin-heading font-weight-bold">Please sign in</h2>
-        <input type="email" id="username" name="username" class="form-control mt-3" placeholder="Email address" required
-               autofocus>
+        <input type="email" id="username" name="username" class="form-control mt-3" placeholder="Email address"
+               required autofocus>
         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block mt-1" type="submit">Sign in</button>
     </form>
